# STA160

./: .gitignore  README.md  pyproject.toml
data/: submission.csv  submission_hr.csv  submission_lasso.csv  submission_lr.csv  submission_ridge.csv  submission_xgb.csv  train_cleaned.csv  train_transformed.csv
docs/: model_comparison.md
eda/: cleaning.ipynb  cleaning.py  correlation.ipynb  correlation.py  pairplots.ipynb  pairplots.py  shap.py  transform.ipynb  transform.py
model/: HuberRegression.ipynb  HuberRegression.py  LassoRegression.ipynb  LassoRegression.py  LinearRegression.py  RandomForest.ipynb  RandomForest.py  RidgeRegression.ipynb  RidgeRegression.py  XGBoost.ipynb  XGBoost.py  XgBoost.ipynb
preprocessing/: cleaning.ipynb  correlation.ipynb  pipeline.py  redundancy.ipynb  test.ipynb  test.py  transform.ipynb
processing/: pipeline.py  test.ipynb
