[project]
name = "sta160"
version = "0.1.0"
description = ""
authors = [
  {name = "Andrew"}
]
readme = "README.md"
requires-python = "~3.12"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "xgboost (>=3.0.2,<4.0.0)",
    "shap (>=0.47.2,<0.48.0)",
    "statsmodels (>=0.14.4,<0.15.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[tool.poetry.group.dev.dependencies]
nbconvert = "^7.16.6"

